--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "@rails/webpacker": "4.2.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "bootstrap": "^4.4.1",
-    "jquery": "^3.5.0",
+    "jquery": "3.4.1",
     "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
+    "tailwindcss": "^1.2.0",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
