--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
+    "react-scroll": "^1.7.16",
     "tailwindcss": "^1.2.0",
     "turbolinks": "^5.2.0"
   },
