--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "roma_react",
   "private": true,
+  "proxy": "http://localhost:3000",
   "dependencies": {
     "@babel/preset-react": "^7.9.4",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
+    "axios": "^0.19.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "bootstrap": "^4.4.1",
     "jquery": "3.4.1",
