--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "bootstrap": "^4.4.1",
+    "formik": "^2.1.4",
     "jquery": "3.4.1",
     "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
@@ -20,7 +21,8 @@
     "react-scroll": "^1.7.16",
     "simple-react-lightbox": "^2.7.3-2",
     "tailwindcss": "^1.2.0",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "yup": "^0.28.4"
   },
   "version": "0.1.0",
   "devDependencies": {
